--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
               <div class="feature-v1" data-aos="fade-up" data-aos-delay="200">
                 <h3>Industrial Experiences</h3>
                 <p>Intern Software Engineer, Nov 2019- Jun 2020. <a href="http://arcadestudiosbd.com/" target="_black">Arcade Studios</a> <br>
-                  Junior Software Engineer, Jul 2020- Present. <a href="http://arcadestudiosbd.com/" target="_black">Arcade Studios</a> </p>
+                  Junior Software Engineer(Part-time), Jul 2020- Present. <a href="http://arcadestudiosbd.com/" target="_black">Arcade Studios</a> </p>
               </div> 
             </div>
           </div>
