--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
             <div class="col-lg-4 pr-lg-5">
               <h3 class="mb-4 heading-h3"><span class="gsap-reveal">Hello!</span></h3>
               <p class="lead gsap-reveal">
-                You know my name. Let me tell you what I think you do not know.
+                You know my name. Let me tell you somethings what I think you do not know.
               </p>
               <p class="mb-4 gsap-reveal"> 
               I am from Mymensingh. A small town of Bangladesh. My father is a banker and my mother is a housewife. I was born in 1998. I studied in Mymensingh Zilla School from class 3 to class 10 (2006-2013). Passed S.S.C in 2014. Then I was admitted to Govt. Ananda Mohan College, Mymensingh, A fomous college in Bangladesh. Completed H.S.C in 2016.<br>
