--- a/index.html
+++ b/index.html
@@ -119,8 +119,8 @@
                 You know my name. Let me tell you somethings what I think you do not know.
               </p>
               <p class="mb-4 gsap-reveal"> 
-              I am from Mymensingh. A small town of Bangladesh. My father is a banker and my mother is a housewife. I was born in 1998. I studied in Mymensingh Zilla School from class 3 to class 10 (2006-2013). Passed S.S.C in 2014. Then I was admitted to Govt. Ananda Mohan College, Mymensingh, A fomous college in Bangladesh. Completed H.S.C in 2016.<br>
-              Then I got myself admitted in Chittagong University of Engineering and Technology. Currently I am studing Computer Science and Engineering.<br>
+              I am from Mymensingh. A small town of Bangladesh. My father is a banker and my mother is a housewife. I was born in 1998. I studied in Mymensingh Zilla School from class 3 to class 10 (2006-2013). Passed S.S.C in 2014. Then I was admitted to Govt. Ananda Mohan College, Mymensingh, A famous college in Bangladesh. Completed H.S.C in 2016.<br>
+              Then I got myself admitted in Chittagong University of Engineering and Technology. Currently I am stuyding Computer Science and Engineering.<br>
               You can find me as an introverted person. I like to keep to myself. I love reading books, watching movies. Love to travel. And I love my work.
               </p>
               <p class="gsap-reveal"><a href="Resume of Nahidul Islam Opu.pdf" class="btn btn-outline-pill btn-custom-light">Download my CV</a></p>
